implementação parcial das categorias